--- a/css/namecard.css
+++ b/css/namecard.css
@@ -57,3 +57,7 @@ no-repeat 하면 화면이 늘어났을 때 같이 안 늘어나서 repeat-x 해
 .direction{margin-bottom: 60px; padding: 0 30px;}
 .direction .title{font-size: 16px; text-align: center; margin-bottom: 50px;}
 .direction .direct_map{height: 400px;}
+
+.qrimg{width: 50px; position: absolute; left:30px; top:30px;}
+.qrimg img{width: 100%; }
+/* position: absolute; 위치 자유롭게 설정가능  */
